# ML-Wakad-Weekdays-5-7-pm-11th-Dec

./: main.py  pyproject.toml  requirements.txt  test.ipynb
01_Simple_Linear_Reg/: SLR.ipynb
02_Multiple_Linear_Reg/: MLR.ipynb
03_Manual_Preprocessing/: pre.ipynb  results.csv
04_Automated_Preprocessing/: pre.ipynb  pre.joblib  results.csv  weight_model.joblib
05_Feature_Selection/: Backward Elimination.ipynb  Forward Feature Selection.ipynb  car_model.joblib  pre.joblib  sel.joblib
06_Regularization/: LassoResults.csv  RidgeResults.csv  Ridge_Lasso.ipynb  pre.joblib  ridge_model.joblib
07_Logistic Regression/: iris_model.joblib  log_reg.ipynb  pre.joblib
08_Decision_Tree_Classification/: DTC.ipynb  iris_model.joblib  pre.joblib
09_Decision_Tree_Regression/: DTR.ipynb  plant_model.joblib  pre.joblib
10 Ensemble/: ensemble.ipynb  loan_model.joblib  pre.joblib
11 Algo Evaluation_project/: algo_eval.ipynb  machine_model.joblib  pre.joblib  results.csv  utils.py
